--- a/src/componentes/ModalCadastroUsuario/ModalCadastroUsuario.css
+++ b/src/componentes/ModalCadastroUsuario/ModalCadastroUsuario.css
@@ -9,7 +9,7 @@
     max-width: 100%;
 }
 
-.corpoModalCadastro form .acoes {
-    margin-top: 48px;
+.corpoModalCadastro footer {
+    margin-top: 40px;
     text-align: center;
 }
